force-app/main/default/objects/ExpSystem__c/ExpSystem__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Manages settings for the ExpSystem class.</description>
    <label>ExpSystem</label>
</CustomObject>