force-app/main/default/objects/ExpSystem__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Recipient(s) of emailed debug info when Send Email is true.</description>
    <inlineHelpText>Recipient(s) of emailed debug info when Send Email is true. Use a comma to separate individual email addresses.</inlineHelpText>
    <label>Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>