force-app/main/default/objects/ExpSystem__c/fields/Logging_Level__c.field-meta.xml
<CustomField>
    <fullName>Logging_Level__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Level at which calls to ExpSystem.debug will be logged. 1 for Finest, 2 for Finer, 3 for Fine, 4 for Debug, 5 for Info, 6 for Warn, 7 for Error. A number greater than 7 means no extended logging.</description>
    <inlineHelpText>Level at which calls to ExpSystem.debug will be logged. 1 for Finest, 2 for Finer, 3 for Fine, 4 for Debug, 5 for Info, 6 for Warn, 7 for Error. A number greater than 7 means no extended logging.</inlineHelpText>
    <label>Logging Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>