force-app/main/default/objects/ExpSystem__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to send debug info as email</description>
    <inlineHelpText>Whether to send debug info as email</inlineHelpText>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>