force-app/main/default/objects/ExpSystem__c/fields/Write_to_Debug_Log__c.field-meta.xml
<CustomField>
    <fullName>Write_to_Debug_Log__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether to write debug info to Debug_Log__c</description>
    <inlineHelpText>Whether to write debug info to Debug_Log__c</inlineHelpText>
    <label>Write to Debug Log</label>
    <type>Checkbox</type>
</CustomField>